# evtol_simulator

./: CMakeLists.txt  LICENSE  README.md
include/: simulation.hpp  vehicle.hpp  vehicle_type.hpp
res/: vehicle_characteristics.json
src/: main.cpp  simulation.cpp  vehicle.cpp  vehicle_type.cpp
test/: test_simulation.cpp  test_vehicle.cpp  test_vehicle_type.cpp
